2004-11-11  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ras.h (RASCONN[AW]): Remove dwSessionId field.

2004-11-09  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnls.h (WINBASEAPI): Define as DECLSPEC_IMPORT
	if  undefined and __W32API_USE_DLLIMPORT__.
	Add WINBASEAPI token to prototypes, throughout.

2004-11-08  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (GetCurrentFiber): Support -masm=intel.
	(GetFiberData): Likewise.
	(NtCurrentTeb): Likewise.

2004-11-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wingdi.h (NIF_INFO): Add define.
	(NIIF_*) Add defines..
	Thanks to: Benoit Blanchon <benoit.blanchon@free.fr>
	(NIF_*): Convert constants to hex.

2004-11-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wingdi.h (GetFontUnicodeRanges,GetGlyphIndicesA,
	GetGlyphIndicesW): Declare.
	(GGI_MARK_NONEXISTING_GLYPHS): Define
	* lib/gdi32.def (GetFontUnicodeRanges,GetGlyphIndicesA,
	GetGlyphIndicesW): Add stubs.

2004-10-24  Dan Aloni  <da-x@colinux.org>

	* include/ddk/ntapi.h (NtQueryFullAttributesFile,
	ZwQueryFullAttributesFile): Declare.
	* include/ddk/ntapi.h (RtlDosPathNameToNtPathName_U):
	Declare.
	lib/ntoskrnl.def (ZwQueryDirectoryFile, ZwQueryFullAttributesFile.
	ZwQueryVolumeInformationFile): Add stubs.

2004-10-18  Danny Smith  <dannysmith@users.sourceforge.net>

	= include/wsahelp.h (WINSOCK_MAPPING, WSHGetWinsockMapping,
        PWSH_GET_WINSOCK_MAPPING): Don't define if __OBJC__.

2004-10-15  Robert Wruck  <wruck@tweerlei.de>
            Danny Smith  <dannysmith@users.sourceforge.net>

	= include/winbase.h (InitializeSListHead, Interlocked*):
	Guard with !__USE_NTOSKRNL__.

	* include/ddk/ntddk.h (__USE_NTOSKRNL__): Define.
	* include/ddk/winddk.h (InitializeSListHead, Interlocked*):
	Guard with  __USE_NTOSKRNL__. 
	(ExInterlockedPopEntrySList, ExInterlockedPushEntrySList):
	Add prototypes.  Guard macro definition with __USE_NTOSKRNL__ 
	&& _WIN32_WINNT >= 0x0501